name:                nag-examples
version:             0.1.0.0
license:             AllRightsReserved
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015 FPComplete Corporation
build-type:          Simple
cabal-version:       >=1.10

executable a02bac
  main-is:             a02bac.hs
  c-sources:           src/a02bac.c
  build-depends:       base >=4 && <5
                     , inline-c
                     , language-c-quote
                     , inline-c-nag
  hs-source-dirs:      src
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include

executable c06puce
  main-is:             c06puce.hs
  c-sources:           src/c06puce.c
  build-depends:       base >=4 && <5
                     , array
                     , inline-c
                     , inline-c-nag
                     , language-c-quote
                     , raw-strings-qq
  hs-source-dirs:      src
  default-language:    Haskell2010
  cc-options:          -O2 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
