name:                nag-test
version:             0.1.0.0
license:             AllRightsReserved
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015 FPComplete Corporation
build-type:          Simple
cabal-version:       >=1.10

executable nag-test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , inline-c
                     , language-c-quote
                     , nag
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           src/Main.c
  cc-options:          -Wall -O3 -m64
  extra-libraries:     nagc_nag imf svml irng intlc
  extra-lib-dirs:      /opt/NAG/cll6i24dcl/lib /opt/NAG/cll6i24dcl/rtl/intel64
  include-dirs:        /opt/NAG/cll6i24dcl/include
