name:                sample-cabal-project
version:             0.1.0.0
license:             AllRightsReserved
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
build-type:          Simple
cabal-version:       >=1.10

executable sample-cabal-project
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4 && <5
                     , inline-c
                     , language-c-quote
                     , template-haskell
                     , raw-strings-qq
  default-language:    Haskell2010

  -- Here the corresponding C sources must be listed for every module
  -- that uses C snippets.  Presumably we could automatically generate
  -- this.
  c-sources:           src/Main.c
  cc-options:          -Wall
