name:                sample-cabal-project
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          francesco@fpcomplete.com
copyright:           (c) 2015 FP Complete Corporation
build-type:          Simple
cabal-version:       >=1.10

executable sample-cabal-project
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4 && <5
                     , inline-c
  default-language:    Haskell2010

  cc-options:          -Wall
  ghc-options:         -Wall
